# ics-generator

./: .gitignore  README.md  event.ics  pyproject.toml
cli/: event
ics-generator/: __init__.py  generate_ics.py  prompts.py  pyproject.toml  schema.py
