[tool.poetry]
name = "ics-generator"
version = "0.1.0"
description = ""
authors = ["Joseph Rudoler <jhrudoler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
transformers = "^4.46.1"
datasets = "^3.0.2"
outlines = "^0.1.1"
openai = "^1.53.0"
icalendar = "^6.0.1"
accelerate = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
